--- a/css/addcss.css
+++ b/css/addcss.css
@@ -848,23 +848,45 @@ button.carousel-control-next {
 
 
 
+/*sticky-menu-design*/
+.sticky-menu-design {
+    background-color: #106092;
+    padding: 14px 14px;
+    position: sticky;
+    bottom: 0;
+    display: none;
+}
+.sticky-menu-tags{
+	  display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.sticky-menu-tags a{
+	text-decoration: none;
+	color: #FFFFFF;
+	font-size: 16px;
+	font-family: "Montserrat", serif;
+	font-weight: 500;
+	margin: 0px !important;
+	display: flex;
+	align-items: center;
+}
+.sticky-menu-tags a:hover{
+	color: #FFFFFF !important;
+}
+.sticky-menu-tags a img{
+	max-width: 20px;
+	width: 100%;
+	margin-right: 5px;
+}
+.newmob-img{
+	max-width: 15px !important;
+	width: 100%;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+@media screen and (max-width:768px){
+	.sticky-menu-design{
+		display: block !important;
+	}
+}
+/*sticky-menu-design enddd*/
