--- a/css/addcss.css
+++ b/css/addcss.css
@@ -911,4 +911,7 @@ button.carousel-control-next {
 	.top-lawyers-list ul li {
 		font-size: 24px;
 	}
+	.footer-logo-new h5 {
+		text-align: center;
+	}
 }
