--- a/css/addcss.css
+++ b/css/addcss.css
@@ -611,7 +611,7 @@ button.carousel-control-next {
     }
     .banner-section{
     	background-image: url(../img/mb-bg.png);
-    	height: 50vh;
+    	height: 64vh;
         padding: 30px 0px 130px;
     }
     .first-name-space-on-mb{
@@ -898,7 +898,7 @@ button.carousel-control-next {
     font-size: 13px;
   }
   .mobilendlaunguage select {
-    font-size: 13px;
+    font-size: 10px;
   }
   .header-navbar  {
   	padding: 10px 0px;
@@ -909,9 +909,89 @@ button.carousel-control-next {
 
 @media screen and (max-width: 768px) {
 	.top-lawyers-list ul li {
-		font-size: 24px;
+		font-size: 22px;
 	}
 	.footer-logo-new h5 {
 		text-align: center;
 	}
+
+	.header-title {
+	    background-color: #020C40;
+	    padding: 5px 0px;
+	}
+	.header-title-child-parent a {
+		font-size: 12px;
+	}
+	.header-navbar  {
+	  	padding: 7px 0px;
+	  }
+
+	 .logo-main img {
+	 	max-width: 140px;
+	 }
+
+	 .header-navbar .container .row  {
+	  	justify-content: space-between;
+	  }
+
+  .header-navbar .container .row .logo-div  {
+	  	    vertical-align: middle !important;
+    padding-left: 25px;
+    width: 60%;
+	  }
+
+	  .header-navbar .container .row .logo-main  {
+	  	    vertical-align: middle !important;	  }
+
+  .header-navbar .container .row div:nth-of-type(4)  {
+    width: fit-content;
+	  }
 }
+
+
+
+  .mobile-sticky-footer {
+    display: none;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #020C40;
+    padding: 10px 15px;
+    box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+  }
+
+  .mobile-sticky-footer .sticky-button {
+    display: inline-block;
+    width: calc(50% - 5px);
+    padding: 6px 0;
+    text-align: center;
+    text-decoration: none;
+    color: #ffffff;
+    background-color: #4299E1;
+    border-radius: 4px;
+    font-weight: 600;
+    transition: background-color 0.3s ease;
+  }
+
+  .mobile-sticky-footer .sticky-button:first-child {
+    margin-right: 10px;
+  }
+
+  .mobile-sticky-footer .sticky-button:hover {
+    background-color: #333333;
+  }
+
+  /* Show footer only on mobile screens */
+  @media screen and (max-width: 749px) {
+    .mobile-sticky-footer {
+      display: flex;
+      justify-content: space-between;
+    }
+    
+    /* Add padding to main content to prevent overlap with sticky footer */
+    main {
+      padding-bottom: 80px;
+    }
+  }
