--- a/css/addcss.css
+++ b/css/addcss.css
@@ -903,6 +903,9 @@ button.carousel-control-next {
   .header-navbar  {
   	padding: 10px 0px;
   }
+  .top-lawyers-list {
+  	padding-top: 20px;
+  }
 
 }
 
