--- a/css/addcss.css
+++ b/css/addcss.css
@@ -651,7 +651,7 @@ button.carousel-control-next {
     	margin-top: 16px;
     }
     .testimonial-section-on-mobile{
-    	padding-top: 335px;
+    	padding-top: 290px;
     	display: block;
     }
     .testimonial-heading{
@@ -923,7 +923,7 @@ button.carousel-control-next {
 	    padding: 5px 0px;
 	}
 	.header-title-child-parent a {
-		font-size: 12px;
+		font-size: 10px;
 	}
 	.header-navbar  {
 	  	padding: 7px 0px;
@@ -952,6 +952,14 @@ button.carousel-control-next {
 
 	  .next-step-box-main {
 	  	gap: 25px;
+	  }
+
+	  .form-main {
+	  	background: #f0eff6;
+	  }
+
+	  .footer-paragraph {
+	  	padding-bottom: 100px;
 	  }
 }
 
